--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,416 @@
+@import url('https://fonts.googleapis.com/css2?family=Moul&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: white!important;
+  font-family: "Roboto-default";
 }
+@media (min-width: 1400px) {
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1350px;
+  }
+}
+body{
+  background-color: #07070A!important;
+}
+@font-face {
+  font-family: "Roboto-default";
+  src: url(font/en/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: "Roboto-light";
+  src: url(font/en/Roboto-Light.ttf);
+}
+@font-face {
+  font-family: "Roboto-bold";
+  src: url(font/en/Roboto-ExtraBold.ttf);
+}
+@font-face {
+  font-family: "Roboto-meduim";
+  src: url(font/en/Roboto-Medium.ttf);
+}
+.moulKh{
+  font-family: "Moul", serif!important;
+}
+.meduim{
+  font-family: "Roboto-meduim";
+}
+.default{
+  font-family: "Roboto-default";
+}
+.light{
+  font-family: "Roboto-light";
+}
+.bold{
+  font-family: "Roboto-bold";
+}
+/* ===================Light&Dark_Theme===================*/
+[data-theme="light"] {
+  --color-bg: #ffffff;
+  --color-fg: #000000;
+}
+
+[data-theme="dark"] {
+  --color-bg: #07070A;
+  --color-fg: #ffffff;
+}
+
+/* ===================Header===================*/
+header .logo img{
+  width: 45px;
+  height: 45px;
+}
+header .navbar ul li a{
+  padding-inline: 15px;
+}
+/* ==================blur-bg================ */
+.blur-style{
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  box-shadow: 0 0 5px 20px #07070A;
+  position: absolute;
+  z-index: -500;
+}
+.blur-style.blue-style{
+  background: radial-gradient(circle,rgb(7, 7, 60) 0%, rgba(7, 7, 10, 0) 70%);
+}
+.blur-style.first{
+  top: -180px;
+  right: -180px;
+}
+.blur-style.second{
+  top: -300px;
+  left: -180px;
+}
+/* =========================Body================= */
+main .container .small-title{
+  font-family: "Roboto-light";
+}
+main .hero-banner .title{
+  font-family: "Roboto-Bold";
+  text-align: center;
+}
+.highLight{
+  color: #935eef!important;
+}
+.highLightBlue{
+  color: #6573e2!important;
+}
+main .hero-banner h1.title{
+  font-size: 45px;
+  margin-block: 10px;
+}
+main .hero-banner .detail{
+  width: 58%;
+  font-family: "Roboto-light";
+  line-height: 25px;
+}
+.social .list-group{
+  padding: 0!important;
+  flex-direction: row;
+} 
+.social .list-group .list-group-item{
+  padding: 0!important;
+  border: none;
+  background-color: transparent;
+} 
+.social .list-group .list-group-item a i{
+  font-size: 24px;
+  padding-inline: 8px;
+} 
+section{
+  margin-top: 100px;
+}
+.hero-banner .galaxy-style{
+  top: 110px;
+  left: 80px;
+  transform: rotate(20deg);
+  width: 350px;
+  height: 130px;
+  overflow: visible;
+  border-radius: 100%;
+  background: radial-gradient(ellipse at center,rgba(80, 15, 145, 0.737) 5%, rgba(7, 7, 10, 0) 60%);
+  position: relative;
+  z-index: -5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero-banner .galaxy-style::before{
+  content: '';
+  position: absolute;
+  width: 130%;
+  height: 130%;
+  overflow: visible;
+  border-radius: 100%;
+  background: radial-gradient(ellipse at center,rgba(25, 4, 112, 0.462) 48%, rgba(7, 7, 10, 0) 70%);
+  z-index: -5;
+}
+.hero-banner .galaxy-style .f-ouline{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transform: scale(0.78)!important;
+  transition: 0.25s;
+  position: relative;
+}
+.hero-banner .galaxy-style .f-ouline.second{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transform: scale(0.55)!important;
+}
+.hero-banner .galaxy-style .f-ouline.third{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transform: scale(0.3)!important;
+}
+.hero-banner .galaxy-style .f-ouline::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #ddd7ff81;
+  transition: 0.25s;
+}
+.hero-banner .galaxy-style .f-ouline.first::before{
+  animation: galaxyRotate 6s linear infinite;
+}
+.hero-banner .galaxy-style .f-ouline.second::before{
+  animation: galaxyRotate 8s linear infinite reverse;
+}
+.hero-banner .galaxy-style .f-ouline.third::before{
+  animation: galaxyRotate 10s linear infinite;
+}
+.card-wrapp-star {
+  top: 0;
+  border-radius: 100%;
+  width: 100%;
+  height: 100%;
+  rotate: 0;
+  background: transparent;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  border: none;
+  position: relative;
+  transition:
+    transform 0.3s;
+}
+.card-wrapp-star .blub {
+  height: calc(1px * var(--j));
+  width: calc(1px * var(--j));
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgb(177, 173, 230) 100%
+  );
+  box-shadow:
+    0 0 20px rgba(255, 255, 255, 0.8),
+    0 0 30px rgba(194, 173, 230, 0.6);
+  animation: starfall linear infinite reverse;
+  animation-duration: calc(40s / var(--i));
+  rotate: -40deg;
+  opacity: 0.8;
+  filter: blur(calc(0.5px * var(--j)));
+}
+
+@keyframes starfall {
+  0% {
+    transform: translateY(250px) scale(0.3) rotate(25deg);
+  }
+  100% {
+    transform: translateY(-40px) scale(1.2) rotate(25deg);
+  }
+}
+@keyframes galaxyRotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(8deg);
+  }
+  50%{    
+    transform: rotate(0deg);
+  }
+  75%{    
+    transform: rotate(-8deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes ariseShadow {
+  0% {
+    box-shadow: 0 -28px 50px 10px #29337fcd;
+  }
+  50%{    
+    box-shadow: 0 -28px 50px 10px #2f3ca1d2;
+  }
+  100% {
+    box-shadow: 0 -28px 50px 10px #29337fcd;
+  }
+}
+.star{
+  position: absolute!important;
+}
+.star.s1{
+  right: 50px;
+}
+.star.s2{
+  bottom: 80px;
+  right: 250px;
+  transform: scale(0.5);
+}
+.star.s3{
+  top: -10px;
+  right: -10px;
+}
+.star.s4{
+  transform: scale(0.8);
+  top: 90px;
+  /* right: -10px; */
+}
+/* =======================Arise============== */
+.hero-banner .arise-wrapper{
+  width: 624px;
+  height: 250px;
+  margin: auto;
+  overflow: hidden;
+
+}
+.hero-banner .arise{
+  width: 680px;
+  height: 600px;
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to bottom, #33338f 0%, #07070A 17%);
+}
+.hero-banner .arise::before{
+  content: '';
+  top: 19px;
+  position: absolute;
+  width: 70%;
+  height: 100%;  
+  animation: ariseShadow 2s linear infinite;
+  border-radius: 50%;
+  background-color: transparent;
+  z-index: -500;
+}
+.hero-banner .arise::after{
+  content: '';
+  top: -29px;
+  position: absolute;
+  width: 102%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #07070A;
+  margin: auto;
+  margin-top: 35px;
+}
+/* =======================About Me========================= */
+.aboutMe{
+  margin-top: 50px;
+}
+
+.aboutMe .myImage{
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 15px;
+}
+.aboutMe .abtBio{
+  font-size: 17px;
+  font-family: "Roboto-light";
+}
+.aboutMe .title-pd{
+  font-size: 17px;
+}
+body .list-group .list-group-item{
+  display: flex;
+  background-color: transparent;
+}
+.aboutMe .list-group-item{
+  border: 0!important;
+  padding: 15px 0!important;
+  color: rgba(255, 255, 255, 0.832)!important;
+}
+.aboutMe .list-group-item .myDetail{
+  width: 75%;
+  margin-left: auto;
+
+}
+/* =====================Education============== */
+.education .ed-title{
+  font-size: 22px!important;
+  font-family: "Roboto-bold"!important;
+  /* display: block; */
+  display: flex;
+}
+.education .detail.school{
+  padding-bottom: 150px;
+}
+.education .detail.left{
+  padding-right: 100px!important;
+  align-items: end!important;
+  text-align: end;
+}
+.education .detail.right{
+  position: relative;
+  padding-left: 100px!important;
+  align-items: start!important;
+}
+.education .detail.left{
+  padding-right: 75px;
+}
+.education .detail.left .ed-title{
+  text-align: end;
+}
+.education .ed-year{
+  font-size: 24px;
+  font-family: "Roboto-bold"!important;
+}
+.education .ed-detail .s_e_year{
+  font-style: italic;
+  font-family: "Roboto-light";
+  color: rgba(255, 255, 255, 0.668)!important;
+}
+.education .lastDetail{
+  top: calc(100% - 10px)!important;
+  
+}
+.education .logo-wrapper .school-logo{
+  height: 65px;
+}
+.education .ed-detail .line{
+  height: calc(100% - 14px);
+  width: 2px;
+  background-color: white!important;
+  top: 14px;
+  padding: 0!important;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+ .education .detail.right .circle-line{
+  position: absolute;
+  width: 20px!important;
+  height: 20px!important;
+  background-color: white!important;
+  border-radius: 50%;
+  left: -10px;
+  top: 10px;
+ }
+ .education .ant-name{
+  font-size: 12px;
+ }
